--- a/api-mcommerce-product.properties
+++ b/api-mcommerce-product.properties
@@ -1,8 +1,11 @@
-server.port= 9004
-
 logging.level.root=error
 logging.level.com.afhunt=info
 logging.level.org.springframework.boot.web.embedded.tomcat=INFO
 
-api-mcommerce-product.limitDeProduits = 2
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3308/mcommerce_produit?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=
+
+mes-configs.limitDeProduits = 2
 
