--- a/api-mcommerce-product.properties
+++ b/api-mcommerce-product.properties
@@ -7,5 +7,5 @@ spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3308/mcommerce_produi
 spring.datasource.username=root
 spring.datasource.password=
 
-mes-configs.limitDeProduits = 2
+api-mcommerce-product.limitDeProduits = 2
 
